2003-10-14  Geoffrey Keating  <geoffk@apple.com>

	* config/darwin.c (machopic_indirect_data_reference): Use a scratch
	register when generating indirect address.

2003-10-14  Richard Earnshaw  <rearnsha@arm.com>

	* arm.c (arm_addimm_operand): MODE arguemnt is unused.
	* arm.md (cbranchne_decr1): Fix bootstrap warning.

2003-10-14  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* fixinc/inclhack.def (alpha_pthread_gcc): New fix.
	* fixinc/fixincl.x: Regenerate.
	* fixinc/tests/base/pthread.h [ALPHA_PTHREAD_GCC_CHECK]: New
	testcase. 
	Fixes PR bootstrap/9330.

2003-10-13  Eric Christopher  <echristo@redhat.com>

	* config/frv/frv.c (frv_adjust_field_align): Redo check for
	too wide bitfields.
	(frv_hard_regno_mode_ok): Add SPR_P and AP_FIRST.
	* config/frv/frv.h (FUNCTION_PROFILER): Remove abort call.
	(SBSS_SECTION_ASM_OP): Remove.
	(EXTRA_SECTIONS): Remove in_sbss.
	(EXTRA_SECTION_FUNCTIONS): Remove SBSS_SECTION_FUNCTION.
	(SBSS_SECTION_FUNCTION, sbss_section): Remove.
	(ASM_OUTPUT_ALIGNED_DECL_LOCAL): Change sbss_section to
	named_section.

2003-10-13  Nathanael Nerode  <neroden@gcc.gnu.org>

	* Makefile.in, configure.in, config.host, mkheaders.in: Replace
	uses of ${target_alias} for directory names (and other places which
	won't like the empty string) with ${target_noncanonical}.  Introduce
	call early in configure.in to _GCC_TOPLEV_NONCANONICAL_TARGET so it's
	available.
	* configure: Regenerate.

2003-10-13  Ian Lance Taylor  <ian@wasabisystems.com>

	* config/arm/iwmmxt.md (cond_iwmmxt_movsi_insn): New pattern.
	* config/arm/arm.md: For splits which rely on conditional moves,
	remove ! TARGET_IWMMXT condition.

2003-10-13  David S. Miller  <davem@redhat.com>

	* ifcvt.c (num_removed_blocks): Rename to num_true_changes.
	(find_cond_trap): Always increment if we emit a conditional
	trap insn.

2003-10-13  Zack Weinberg  <zack@codesourcery.com>

	* Makefile.in (BUILD_RTL): Replace $(BUILD_PREFIX)insn-modes.o
	with min-insn-modes.o.